# Assigments

./: .gitignore  README.md
a1/: CMakeLists.txt
a1/src/: ecs.hpp  main.cpp
a2-4/: CMakeLists.txt
a2-4/assets/shaders/: chicken.frag.glsl  chicken.vert.glsl  egg.frag.glsl  egg.vert.glsl  line.frag.glsl  line.vert.glsl  sprite.frag.glsl  sprite.vert.glsl  wind.frag.glsl  wind.vert.glsl
a2-4/src/: application.cpp  application.h  assets.cpp  assets.h  common.cpp  common.h  main.cpp  project_config.h.in  registry.cpp  registry.h  window.cpp  window.h
a2-4/src/systems/: audio.cpp  audio.h  physics.cpp  physics.h  render.cpp  render.h  systems.h  world.cpp  world.h
a2-4/src/utils/: command_line_options.h  framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h
